8262308: [lworld] Various small C2 fixes for bugs found by stress testing